# LifeSketch

./: CMakeLists.txt  main.cpp
report/Frequency/: report_N.h
sketch/CM/: LifeSketch.h
tool/: inc.h  loadData.h
